fix: buttons overflow

--- a/sass/blocks/_activities.sass
+++ b/sass/blocks/_activities.sass
@@ -57,7 +57,8 @@
     &_4
       max-width: 200px
   &__button
-    padding: 7px 22px
+    width: 100px
+    padding: 7px 22px 7px 21px
     font-family: 'Nunito', sans-serif
     font-weight: 600
     font-size: 12px
@@ -65,4 +66,3 @@
     border-radius: 4px
     color: $text-color-light
     background-color: $primary-color
-
