--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -142,7 +142,7 @@
       line-height: 15px
   &__button
     padding: 18px
-    min-width: 160px
+    width: 160px
     min-height: 50px
     font-style: normal
     font-weight: bold
