--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -165,6 +165,7 @@
       line-height: 25px
   &-button
     width: 100%
+    max-width: 295px
     min-height: 45px
     border-radius: 4px
     font-style: normal
