--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -74,7 +74,7 @@
     position: absolute
     top: 0
     right: 0
-    min-width: 65px
+    width: 65px
     height: 100%
     border-radius: 0 4px 4px 0
     font-style: normal
