--- a/sass/blocks/_packages.sass
+++ b/sass/blocks/_packages.sass
@@ -132,6 +132,7 @@
     //   text-decoration-line: line-through
     //   color: inherit
   &__button
+    width: 120px
     padding: 10px 26px
     font-family: 'Nunito', sans-serif
     font-style: normal
